# Gemini-Image-Tools

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  start_all.bat
.claude/: settings.local.json
backend/: Cargo.toml  config.json
backend/src/: main.rs  storage.rs
backend/src/models/: openai.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: IdleAnimation.tsx  TopBar.tsx
frontend/src/pages/: Agent.tsx  CanvasPage.tsx  History.tsx  SettingsPage.tsx  Workstation.tsx
